<resources>
    <string name="app_name" translatable="false">Pronunhelper</string>
    <string name="enter_word">Enter word</string>
    <string name="play">Play</string>
    <string name="set_pitch">Set Pitch</string>
    <string name="word_or_sentence">Word or sentence</string>
    <string name="set_speed">Set speed</string>
    <string name="pitch_value" translatable="false">1.0</string>

    <string name="digits" translatable="false">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890. \'\",?!)(</string>

    <string name="hold_until_finish">Hold your position until process finished</string>
    <string name="result">Result</string>
    <string name="initiation_failed">Initiation failed</string>
    <string name="word_not_english">This is not an english words</string>
    <string name="add">Add</string>
    <string name="to_whitelist">to whitelist</string>
    <string name="whitelist">Whitelist</string>
    <string name="deleted">deleted</string>
    <string name="choose_menu">Choose Menu</string>
    <string name="take_picture">Take Picture</string>
    <string name="enter_text">Enter Text</string>
    <string name="exit">Exit</string>
    <string name="check_language">Check Language</string>
</resources>
